--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "3.3",
-        "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
-        "spatie/laravel-permission": "^6.20",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "codeat3/blade-eos-icons": "^1.15",
         "codeat3/blade-fluentui-system-icons": "^1.34",
+        "filament/filament": "3.3",
+        "laravel/framework": "^11.0",
+        "laravel/reverb": "^1.0",
+        "laravel/tinker": "^2.9",
         "mallardduck/blade-boxicons": "^2.4",
-        "secondnetwork/blade-tabler-icons": "^3.34"
+        "predis/predis": "^3.2",
+        "secondnetwork/blade-tabler-icons": "^3.34",
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
